WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204451
Tighten ScrollingTreeNode tree mutations
https://bugs.webkit.org/show_bug.cgi?id=204451
Summary
Tighten ScrollingTreeNode tree mutations
Antti Koivisto
Reported
2019-11-21 06:11:03 PST
Switch to Ref<> and add assertions.
Attachments
patch
(9.13 KB, patch)
2019-11-21 06:22 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(9.15 KB, patch)
2019-11-21 06:32 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(9.15 KB, patch)
2019-11-21 07:32 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-11-21 06:22:08 PST
Created
attachment 384047
[details]
patch
Antti Koivisto
Comment 2
2019-11-21 06:32:28 PST
Created
attachment 384048
[details]
patch
Antti Koivisto
Comment 3
2019-11-21 07:32:39 PST
Created
attachment 384052
[details]
patch
WebKit Commit Bot
Comment 4
2019-11-21 11:31:47 PST
Comment on
attachment 384052
[details]
patch Clearing flags on attachment: 384052 Committed
r252742
: <
https://trac.webkit.org/changeset/252742
>
WebKit Commit Bot
Comment 5
2019-11-21 11:31:49 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-11-21 11:32:47 PST
<
rdar://problem/57401956
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug