Tighten ScrollingTreeNode tree mutations https://bugs.webkit.org/show_bug.cgi?id=204451

Reviewed by Simon Fraser.

- Use plain Vector instead of std::unique_ptr<Vector> for children
- Use Vector<Ref> instead of Vector<RefPtr>
- Remove non-const ScrollingTreeNode::children() accessor
- Add relase assert that all mutations happen during ScrollingTree::commitTreeState

* page/scrolling/ScrollingTree.cpp:
(WebCore::ScrollingTree::commitTreeState):
(WebCore::ScrollingTree::updateTreeFromStateNode):
(WebCore::ScrollingTree::applyLayerPositionsRecursive):
(WebCore::ScrollingTree::notifyRelatedNodesRecursive):
* page/scrolling/ScrollingTree.h:
(WebCore::ScrollingTree::inCommitTreeState const):
* page/scrolling/ScrollingTreeNode.cpp:
(WebCore::ScrollingTreeNode::appendChild):
(WebCore::ScrollingTreeNode::removeChild):
(WebCore::ScrollingTreeNode::removeAllChildren):

Encapsulate mutations to these functions.

(WebCore::ScrollingTreeNode::dump const):
(WebCore::ScrollingTreeNode::scrollingNodeForPoint const):
* page/scrolling/ScrollingTreeNode.h:
(WebCore::ScrollingTreeNode::children const):
(WebCore::ScrollingTreeNode::children): Deleted.


Canonical link: https://commits.webkit.org/217723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252742 268f45cc-cd09-0410-ab3c-d52691b4dbfc